--- a/src/style/global.css
+++ b/src/style/global.css
@@ -26,6 +26,6 @@ body::-webkit-scrollbar-thumb {
 
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: #1a1a1a;
+    background-color: rgb(21, 30, 46);
   }
 }
